# docs/swagger.json
@@ -76,7 +76,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "branch"
+                    "Branch"
                 ],
                 "parameters": [
                     {
@@ -135,11 +135,13 @@
                     },
                     {
                         "type": "integer",
+                        "description": "第几页",
                         "name": "pageNum",
                         "in": "query"
                     },
                     {
                         "type": "integer",
+                        "description": "每页多少条",
                         "name": "pageSize",
                         "in": "query"
                     },
@@ -179,7 +181,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "branch"
+                    "Branch"
                 ],
                 "parameters": [
                     {
@@ -272,7 +274,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "branch"
+                    "Branch"
                 ],
                 "parameters": [
                     {
@@ -281,6 +283,7 @@
                             "type": "integer"
                         },
                         "collectionFormat": "csv",
+                        "description": "待编号",
                         "name": "ids",
                         "in": "query"
                     }
@@ -310,11 +313,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "branch"
+                    "Branch"
                 ],
                 "parameters": [
                     {
                         "type": "integer",
+                        "description": "待编号",
                         "name": "id",
                         "in": "query"
                     }
@@ -342,7 +346,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "branch"
+                    "Branch"
                 ],
                 "parameters": [
                     {
@@ -427,34 +431,6 @@
                 }
             }
         },
-        "/branchTab": {
-            "get": {
-                "description": "查询单个branch",
-                "responses": {}
-            },
-            "post": {
-                "description": "创建branch",
-                "responses": {}
-            },
-            "delete": {
-                "description": "批量删除branch",
-                "responses": {}
-            }
-        },
-        "/branchTab/:id": {
-            "get": {
-                "description": "查询branch列表",
-                "responses": {}
-            },
-            "put": {
-                "description": "更新branch",
-                "responses": {}
-            },
-            "delete": {
-                "description": "删除单个branch",
-                "responses": {}
-            }
-        },
         "/log/operation/delete/batch": {
             "delete": {
                 "tags": [
@@ -521,30 +497,228 @@
         },
         "/news": {
             "get": {
-                "description": "查询单个news",
-                "responses": {}
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "查询单个新闻",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "News"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "新闻内容",
+                        "name": "content",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "新闻创建者",
+                        "name": "creator",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "第几页",
+                        "name": "pageNum",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "每页多少条",
+                        "name": "pageSize",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "新闻标题",
+                        "name": "title",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/vo.ListNewsResponse"
+                        }
+                    }
+                }
             },
             "post": {
-                "description": "创建news",
-                "responses": {}
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "创建新闻",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "News"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "新闻内容",
+                        "name": "content",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "新闻创建者",
+                        "name": "creator",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "新闻标题",
+                        "name": "title",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/vo.CreateNewsResponse"
+                        }
+                    }
+                }
             },
             "delete": {
-                "description": "批量删除news",
-                "responses": {}
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "批量删除新闻",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "News"
+                ],
+                "parameters": [
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        },
+                        "collectionFormat": "csv",
+                        "description": "待编号",
+                        "name": "ids",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/vo.DeleteNewsResponse"
+                        }
+                    }
+                }
             }
         },
         "/news/:id": {
             "get": {
-                "description": "查询news列表",
-                "responses": {}
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "查询新闻列表",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "News"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "待编号",
+                        "name": "id",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/vo.GetNewsResponse"
+                        }
+                    }
+                }
             },
             "put": {
-                "description": "更新news",
-                "responses": {}
-            },
-            "delete": {
-                "description": "删除单个news",
-                "responses": {}
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "更新新闻",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "News"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "新闻内容",
+                        "name": "content",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "新闻创建者",
+                        "name": "creator",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "新闻标题",
+                        "name": "title",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/vo.UpdateNewsResponse"
+                        }
+                    }
+                }
             }
         },
         "/role/apis/get/:roleId": {
@@ -730,12 +904,30 @@
             "type": "object",
             "properties": {
                 "code": {
+                    "description": "0:成功，非0:失败",
                     "type": "integer"
                 },
                 "data": {
                     "$ref": "#/definitions/vo.Branch"
                 },
                 "message": {
+                    "description": "提示信息",
+                    "type": "string"
+                }
+            }
+        },
+        "vo.CreateNewsResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "0:成功，非0:失败",
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/vo.News"
+                },
+                "message": {
+                    "description": "提示信息",
                     "type": "string"
                 }
             }
@@ -744,12 +936,30 @@
             "type": "object",
             "properties": {
                 "code": {
+                    "description": "0:成功，非0:失败",
                     "type": "integer"
                 },
                 "data": {
                     "type": "integer"
                 },
                 "message": {
+                    "description": "提示信息",
+                    "type": "string"
+                }
+            }
+        },
+        "vo.DeleteNewsResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "0:成功，非0:失败",
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "integer"
+                },
+                "message": {
+                    "description": "提示信息",
                     "type": "string"
                 }
             }
@@ -758,12 +968,30 @@
             "type": "object",
             "properties": {
                 "code": {
+                    "description": "0:成功，非0:失败",
                     "type": "integer"
                 },
                 "data": {
                     "$ref": "#/definitions/vo.Branch"
                 },
                 "message": {
+                    "description": "提示信息",
+                    "type": "string"
+                }
+            }
+        },
+        "vo.GetNewsResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "0:成功，非0:失败",
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/vo.News"
+                },
+                "message": {
+                    "description": "提示信息",
                     "type": "string"
                 }
             }
@@ -772,12 +1000,63 @@
             "type": "object",
             "properties": {
                 "code": {
+                    "description": "0:成功，非0:失败",
                     "type": "integer"
                 },
                 "data": {
                     "$ref": "#/definitions/vo.PagerBranch"
                 },
                 "message": {
+                    "description": "提示信息",
+                    "type": "string"
+                }
+            }
+        },
+        "vo.ListNewsResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "0:成功，非0:失败",
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/vo.PagerNews"
+                },
+                "message": {
+                    "description": "提示信息",
+                    "type": "string"
+                }
+            }
+        },
+        "vo.News": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "description": "新闻内容",
+                    "type": "string"
+                },
+                "created_at": {
+                    "description": "created_at",
+                    "type": "string"
+                },
+                "creator": {
+                    "description": "新闻创建者",
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "description": "deleted_at",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "id",
+                    "type": "integer"
+                },
+                "title": {
+                    "description": "新闻标题",
+                    "type": "string"
+                },
+                "updated_at": {
+                    "description": "updated_at",
                     "type": "string"
                 }
             }
@@ -806,16 +1085,58 @@
                 }
             }
         },
+        "vo.PagerNews": {
+            "type": "object",
+            "properties": {
+                "extra": {
+                    "type": "object",
+                    "additionalProperties": true
+                },
+                "list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/vo.News"
+                    }
+                },
+                "pageNum": {
+                    "type": "integer"
+                },
+                "pageSize": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
         "vo.UpdateBranchResponse": {
             "type": "object",
             "properties": {
                 "code": {
+                    "description": "0:成功，非0:失败",
                     "type": "integer"
                 },
                 "data": {
                     "$ref": "#/definitions/vo.Branch"
                 },
                 "message": {
+                    "description": "提示信息",
+                    "type": "string"
+                }
+            }
+        },
+        "vo.UpdateNewsResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "0:成功，非0:失败",
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/vo.News"
+                },
+                "message": {
+                    "description": "提示信息",
                     "type": "string"
                 }
             }
